# selfhosted

./: Makefile  README.md  flake.nix  gpu-test.yml  test.yml
.githooks/: pre-commit
calibre-web/: compose.yml  deployment.yml  flake.nix  result  service.yml
code-server/: Containerfile
deeplabcut/: compose.2.2.3.yml  compose.napari.yml  compose.wsl.yml  compose.yml
deeplabcut/2.2.3/: Containerfile
deeplabcut/2.3.0/: Containerfile
deeplabcut/novnc/: Containerfile
services/deeplabcut/: compose.yml
services/deeplabcut/deeplabcut/: Containerfile
services/deeplabcut/novnc/: Containerfile
services/jupyter/: Containerfile  compose.yml
services/jupyter/python/: install_cunumeric.sh  pyproject.toml
services/jupyter/r/: DESCRIPTION
services/miniflux/: compose.yml
test-vnc/: Containerfile
